# dota2aggregation

./: Makefile  README.md  pyproject.toml
src/: config.py  logging_config.json  main.py
src/dota2api/: endpoints.py  matches.py  players.py  recent_matches.py  schemas.py  types.py
src/etl/: pipeline.py
src/handlers/: handlers.py  schemas.py
tests/data/: simple_data.py
tests/data/dota2api_data/: internal_server_error.py  not_exist.py  not_found_error.py  validate_error.py
tests/data/dota2api_data/invalid_schema/: matches_info.py  recent_matches.py
tests/data/dota2api_data/simple/: matches_info.py  recent_matches.py
tests/dummy_data/: datatest.py  pipeline_data_1.py
tests/integration/: conftest.py
tests/integration/tests_dota2api/: test_matches.py  test_recent_matches.py
tests/tests_dota2api/: test_matches.py  test_players.py
tests/tests_etl/: test_transform_and_agregate.py
tests/unit/: conftest.py
tests/unit/tests_dota2api/: test_matches.py  test_recent_matches.py
tests/unit/tests_etl/: test_transform_and_agregate.py
tools/: dummy_generator.py
