[tool.poetry]
name = "dota2aggregation"
version = "0.0.1"
description = ""
authors = ["Sergey Chudov <chudov42@gmail.com>"]
license = "MIT"

packages = [
    {include = "src"},
    {include = "tests", format = "sdist"},
]

readme = "README.md"
homepage = "https://github.com/WindowGenerator/dota2aggregation"
repository = "https://github.com/WindowGenerator/dota2aggregation"
documentation = "https://github.com/WindowGenerator/dota2aggregation"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.77.1"
aiohttp = "^3.8.1"
jsonschema = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
isort = "^5.10.1"
pytest-asyncio = "^0.18.3"

[tool.isort]
line_length = 88
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

known_first_party = "src"
known_third_party = [
    "pytest",
]

[tool.pytest.ini_options]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
